# PRISM

./: .gitignore  .pre-commit-config.yaml  DELIVERABLES_SUMMARY.md  Makefile  PROJECT_STRATEGY.md  README.md  USER_APPLICATION_GUIDE.md  env_template.txt  pyproject.toml  requirements-test.in  requirements.in  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  app.py  bootstrap.py  chat_helpers.py  main.py  streamlit_theme.py
app/assets/: .gitkeep  README.md
app/components/: __init__.py  openai_models.py
app/pages/: 1_📊_Dashboard.py  2_📁_Upload_Data.py  3_🤖_ML_Analysis.py  4_💬_LLM_Insights.py  5_📈_Rankings.py  6_🔍_Compare_Projects.py  7_💭_Chat_Assistant.py  8_📉_Risk_Trends.py  9_📋_Usability_Survey.py
config/: __init__.py  llm_config.yaml  logging_config.yaml  mcda_config.yaml  model_config.yaml  settings.py  ui_config.yaml
data/: README.md
data/processed/: .gitkeep
data/raw/: .gitkeep  sample_projects.csv
data/schemas/: project_schema.json  validation_rules.yaml
data/synthetic/: .gitkeep
docs/academic/: Chapter_1_Introduction.md  Chapter_2_Literature_Review.md  RESEARCH_CITATIONS.md  THESIS_ISSUES_AND_FIXES.md
examples/: README.md  streamlit_test_projects.json
experiments/: .gitkeep
models/encoders/: .gitkeep
models/metadata/: feature_names.json  model_registry.json
models/ml/: .gitkeep  best_model.pkl  feature_names.json
models/scalers/: .gitkeep
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_ml_modeling.ipynb  04_llm_experiments.ipynb  05_mcda_analysis.ipynb  06_hybrid_evaluation.ipynb  07_results_visualization.ipynb  README.md
scripts/: evaluate_system.py  preprocess_jira_data.py  setup_environment.sh  train_models.py
src/: __init__.py
src/chat/: __init__.py  assistant.py
src/data/: __init__.py  feature_engineer.py  generator.py  loader.py  preprocessor.py  snapshot_store.py  validator.py
src/explainability/: __init__.py  shap_explainer.py
src/mcda/: __init__.py  ranker.py  topsis.py
src/models/: __init__.py
src/risk_response/: __init__.py  engine.py
src/utils/: __init__.py  logger.py  metrics.py
src/visualization/: __init__.py  risk_charts.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/test_data/: .gitkeep
tests/unit/: __init__.py  test_chat_assistant.py  test_data_loader.py  test_feature_engineer.py  test_generator.py  test_llm.py  test_mcda.py  test_ml_models.py  test_preprocessor.py  test_utils.py  (+2 more)
(+8 files in other folders)
